public/assets/css/burger_style.css
*{
    font-family: 'Courier New', Courier, monospace;
    color:#FFFFFF;
   
    
}
body,html{
    margin:0;
    padding: 0;
}
p{
    
    font-weight: bold;
    font-size:1.2em;
    color:#000;
}
.err{
    font-weight: bold;
    color:red;
}
body{
    max-width:100%;
    overflow-x: hidden;
    background-color: #63462d;
}
.body-title{
    text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
    font-weight: bold;
    display: block;
    text-align: center;
    
}
.pics{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width:8em;
    height:6em;
    max-width:8em;
    max-height:auto;
}

.slider{
    
    animation: slide-up 0.4s ease;
    
   
}
/* buttons only style with ids (i think its something to do with skeleton) */
#new-burger{
    border-color: #000;
    background-color:#ac3f37;
    color: #FFFFFF;
}

.form-reader{
    border-color: #000;
    background-color:#ac3f37;
    color: #FFFFFF;
}
.devour-burger{
    border-color: #000;
    color:#FFFFFF;
    background-color:#8F7B69;
    display: block;
    margin:1%;
}

header{
    overflow-x: hidden;
    text-align: justify;
    font-weight: bold;
    max-width:100%;
    margin-bottom: 5%;
    background-color:#FFDC9F;
    text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
    border-bottom-style: groove;
    border-bottom-width:1%;
    border-color:#ED7459;
}
.head-title{
    font-family: 'Righteous', cursive;
    font-size:6em;

}
.main-content{
    margin-bottom:5%;
    height:100%;
    background-color: #63462d;
    /* text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000; */

}
.burger-option{
    
    background-color: #fcd863;
    border-radius: 1.5em;
    border-style:solid;
    border-width:1%;
    border-color: #e7c555;
    text-align: justify;
    
}
.ingredient{
    color:#000;
}
.the-meats{
    color:#000;
}
option{
    color: #000;
}
    

footer{
    text-align: center;
    overflow-x: hidden;
    border-top-style: ridge;
    border-top-width: 1%;
    border-top-color:#FFDC9F;
    margin-top:5%;
    bottom: 0;
    width: 100%;
    padding: 1%;
    color: white;
    background-color: #ED7459;
    position: fixed;
    
}
h3{
    font-size:1em;
    font-weight: bold; 
}
@keyframes slide-up {
    0% {
        opacity: 0;
        transform: translateY(20px);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}
/* Larger than mobile */
@media (min-width: 320px) and (max-width: 480px){
    body,html{
        margin:0;
        padding: 0;
    }
    *{
        max-width:100%;
        
    }
    body{
        overflow-y:scroll;
    }
    header{
        width:105%;
    }
    .head-title{
        font-size:3em;
    }
    .body-title{
        font-size:2em;
    }
    p{
        font-size:1em;
    }
    .form-reader{
        width:100%;
    }
    
    
}


/* Larger than phablet */
@media (min-width: 490px) and (max-width: 780px){
    body,html{
        margin:0;
        padding: 0;
    }
    header{
        width:150%;
        margin-left:0.06%;
        
    }
    .head-title{
        font-size:4em;

    }
    body{
        
        width:100%;
    }
    footer{
        position: fixed;
        bottom: 0;
        margin-left:0.1%;
        width:100%;
    }
}

/* Larger than tablet */
@media (min-width: 750px) and (max-width: 1000px) {
    
    header{
        width:100%;
        
    }

}

